cluster/tekkom-bot/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tekkom-bot-api
  name: tekkom-bot-api
  namespace: tekkom-bot
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: tekkom-bot-api
  template:
    metadata:
      labels:
        app: tekkom-bot-api
    spec:
      imagePullSecrets:
        - name: tekkom-bot-pull-secret
      containers:
        - name: tekkom-bot-api
          image: registry.login.no/tekkom/playground/tekkom-bot/api:2.5.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
              cpu: "250m"
